--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ main {
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 1px solid red;
     position: relative;
 }
 
@@ -48,12 +47,62 @@ main {
     flex-direction: column;
     gap: 35px;
     position: absolute;
-    left: 10%;
+    left: 14%;
 }
 
-#cards #back {
+#front, #back {
+    width: 447px;
+    height: 230px;
+    border-radius: 10px;
+    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.616);
+    color: var(--Light-grayish-violet);
+}
+
+#front {
     position: relative;
-    left: 20%;
+    right: 12%;
+    background-image: url(./images/bg-card-front.png);
+}
+
+#front div{
+    padding: 25px 30px;
+}
+
+#front #infos {
+    margin-top: 10px;
+    font-size: 12px;
+}
+
+#infos p {
+    font-size: 2.6em;
+    line-height: 0.8em;
+    letter-spacing: 0.06em;
+}
+
+#infos span {
+    display: inline-block;
+    margin-top: 30px;
+    font-size: 1.2em;
+    letter-spacing: 0.2em;
+}
+
+#infos p + span {
+    margin-right: 44%;
+}
+
+#back {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 10px 60px 0 50px;
+    position: relative;
+    left: 10%;
+    background-image: url(./images/bg-card-back.png);
+}
+
+#back p {
+    font-size: 0.8em;
+    line-height: 1;
 }
 
 /* Formulário */
@@ -85,6 +134,7 @@ input {
     margin-bottom: 20px;
     border: 1px solid var(--Light-grayish-violet);
     border-radius: 8px;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 fieldset {
@@ -117,12 +167,8 @@ fieldset#inputs #year {
 
 input[type="submit"] {
     height: 50px;
-    font-family: 'Space Grotesk', sans-serif;
     line-height: 2px;
+    cursor: pointer;
     color: var(--White);
     background-color: var(--Very-dark-violet); 
 } 
-
-input[type="text"]:focus {
-    border-color: var(--linear-gradient-activeInput);
-}
