--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 body {
@@ -24,7 +25,6 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family: 'Space Grotesk', sans-serif;
     font-size: 18px;
     background-image: url(./images/bg-main-desktop.png);
     background-size: 30% contain;
@@ -134,7 +134,7 @@ input {
     margin-bottom: 20px;
     border: 1px solid var(--Light-grayish-violet);
     border-radius: 8px;
-    font-family: 'Space Grotesk', sans-serif;
+    outline: none;
 }
 
 fieldset {
@@ -171,4 +171,4 @@ input[type="submit"] {
     cursor: pointer;
     color: var(--White);
     background-color: var(--Very-dark-violet); 
-} 
+}
