--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 :root {
     /* Colors*/
+    /*Primary*/
+    --Linear-gradient-active-input: hsl(249, 99%, 64%) hsl(278, 94%, 30%);
+    --Erro: hsl(0, 100%, 66%);
+
     /* Neutral */
     --White: hsl(0, 0%, 100%);
     --Light-grayish-violet: hsl(270, 3%, 87%);
@@ -10,175 +14,235 @@
 }
 
 * {
+    font-family: 'Space Grotesk', sans-serif;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Space Grotesk', sans-serif;
 }
 
 body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100%;
     display: flex;
-    flex-direction: column;
-    font-size: 18px;
-    background-image: url(./images/bg-main-desktop.png);
-    background-size: 30% contain;
-    background-repeat: no-repeat;
+    align-items: center;
+    background-color: aquamarine;
 }
 
 main {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: relative;
+    gap: 50px;
+    background-color: burlywood;
 }
 
-/* Cartões */
-#cards {
-    width: 447px;
+section {
+    border: 1px solid red;
+    width: 100vw;
+    height: 100vh;
+}
+
+section#left {
+    width: 50%;
+    padding: 10px;
+    position: relative;
+    background-image: url(./images/bg-main-desktop.png);
+    background-size: 70% 100%;
+    background-repeat: no-repeat;
+}
+
+section#left #cards {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 35px;
+    gap: 20px;
     position: absolute;
-    left: 14%;
+    left: 20px;
+    margin-top: 50px;
 }
 
-#front, #back {
+#cards #card_front{
     width: 447px;
-    height: 230px;
-    border-radius: 10px;
-    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.616);
-    color: var(--Light-grayish-violet);
-}
-
-#front {
-    position: relative;
-    right: 12%;
-    background-image: url(./images/bg-card-front.png);
-}
-
-#front div{
-    padding: 25px 30px;
-}
-
-#front #infos {
-    margin-top: 10px;
-    font-size: 12px;
-}
-
-#infos p {
-    font-size: 2.6em;
-    line-height: 0.8em;
-    letter-spacing: 0.06em;
-}
-
-#infos span {
-    display: inline-block;
-    margin-top: 30px;
-    font-size: 1.2em;
-    letter-spacing: 0.2em;
-}
-
-#infos p + span {
-    margin-right: 44%;
-}
-
-#back {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 10px 60px 0 50px;
-    position: relative;
-    left: 10%;
-    background-image: url(./images/bg-card-back.png);
-}
-
-#back p {
-    font-size: 0.8em;
-    line-height: 1;
-}
-
-/* Formulário */
-section#form {
-    width: 350px;
-    height: 450px;
-    position: absolute;
-    left: 60%;
-    /* border: 1px solid red; */
-}
-
-form{display: none;}
-
-label {
-    margin-right: 40px;
-    font-size: 12px;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-    color: var(--Very-dark-violet);
-}
-
-input{
-    width: 350px;
-    height: 35px;
-    padding: 2px 10px;
-    margin: 5px 0 20px 0;
-    outline: none;
-    border: 1px solid var(--Light-grayish-violet);
-    border-radius: 6px;
-}
-
-input:active, input:focus {
-    cursor: pointer;
-    border: 1px solid;
-    border-color: hsl(249, 99%, 64%) hsl(278, 94%, 30%);
-}
-
-input::placeholder {
-    color: var(--Light-grayish-violet);
-}
-
-fieldset {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 10px;
-    border: none;
-}
-
-#month, #year {
-    width: 70px;
-}
-
-#cvc {
-    width: 180px;
-    margin-left: 10px;
-}
-
-input[type="submit"] {
-    width: 350px;
-    height: 40px;
-    font-size: 14px;
-    color: var(--Light-grayish-violet);
-    background-color: var(--Very-dark-violet);
-}
-
-/* mensagem de agradecimento */
-div#thankYou {
-    width: 350px;
-    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    top: 50px;
-    border: 1px solid red;
+    left: 110px;
 }
 
-div#thankYou p{
-    font-size: 30px;
-    margin: 50px;
+#card_front #logo {
+    width: 80px;
+    position: absolute;
+    top: 30px;
+    left: 40px;
+}
+
+#card_front h1 {
+    position: absolute;
+    top: 140px;
+    font-size: 32px;
+    font-weight: 100;
+    letter-spacing: 1px;
+    color: var(--White);
+}
+
+#card_front #front_infos {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 25px;
+    font-size: 16px;
+    letter-spacing: 1px;
     text-transform: uppercase;
+    color: var(--White);
+}
+
+#card_front #front_infos p{
+    position: relative;
+    left: 35px;
+}
+
+#card_front #front_infos div {
+    position: relative;
+    right: 35px;
+}
+
+#card_back {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    top: 280px;
+    left: 200px;
+}   
+
+#card_back span {
+    position: absolute;
+    right: 50px;
+    letter-spacing: 1.5px;
+    color: var(--Light-grayish-violet);
+}
+
+section#right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: aliceblue;
+}
+
+.form{
+    width: 400px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section#right #grid_container {
+    display: grid;
+    grid-template-columns: 160px 180px;
+    grid-template-rows: auto;
+    column-gap: 5px;
+    row-gap: .5rem;
+}
+
+.form #grid_1, #grid_2, #grid_5 {
+    grid-column: 1/3;
+}
+
+.form #grid_3 #inputDate{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.form #grid_3 #two_inputs input{
+    display: inline;
+    width: 70px;
+}
+
+label{
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: medium;
+    color: var(--Very-dark-violet);
+}
+
+input{
+    width: 100%;
+    height: 35px;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 6px;
+    border: 1px solid var(--Light-grayish-violet);
+    transition: border 100ms ease-in;
+}
+
+input:focus {
+    border: 2px solid;
+    border-color: var(--Linear-gradient-active-input);
+    outline: none;
+}
+
+input::placeholder {
+    color: var(--Dark-grayish-violet);
+    letter-spacing: 1px;
+}
+
+.btn_submit {
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    color: var(--White);
+    background-color: var(--Very-dark-violet);
+}
+
+.erro {
+    display: none;
+    color: var(--Erro);
+}
+
+.erroInput{
+    border: 2px solid var(--Erro);
+    transition: border 100ms ease-in;
+}
+
+.thank{
+    width: 400px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.thank div {
+    width: 400px;
+    padding: 20px;
+    text-align: center;
+}
+
+.thank h1 {
+    font-size: 25px;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    color: var(--Very-dark-violet);
+    margin: 30px 0 20px 0;
+} 
+
+.thank p {
+    color: var(--Light-grayish-violet);
+    margin-bottom: 40px;
+}
+
+.hidden {
+    display: none;
 }
