--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ section#left #cards {
     bottom: 25px;
     font-size: 16px;
     letter-spacing: 1px;
-    text-transform: uppercase;
+    text-tran#form: uppercase;
     color: var(--White);
 }
 
@@ -137,7 +137,7 @@ section#right {
     padding-left: 5%;
 }
 
-.form{
+#form{
     width: 400px;
     height: 400px;
     display: flex;
@@ -153,18 +153,18 @@ section#right #grid_container {
     row-gap: .5rem;
 }
 
-.form #grid_1, #grid_2, #grid_5 {
+#form #grid_1, #grid_2, #grid_5 {
     grid-column: 1/3;
 }
 
-.form #grid_3 #inputDate{
+#form #grid_3 #inputDate{
     width: 100%;
     display: flex;
     flex-direction: row;
     gap: 10px;
 }
 
-.form #grid_3 #two_inputs input{
+#form #grid_3 #two_inputs input{
     display: inline;
     width: 70px;
 }
@@ -198,6 +198,12 @@ input::placeholder {
     letter-spacing: 1px;
 }
 
+input:invalid {
+    border: 2px solid var(--Erro);
+    transition: border 100ms ease-in;
+}
+
+
 .btn_submit {
     width: 100%;
     height: 40px;
@@ -212,26 +218,21 @@ input::placeholder {
     color: var(--Erro);
 }
 
-.erroInput{
-    border: 2px solid var(--Erro);
-    transition: border 100ms ease-in;
-}
-
-.thank{
+#thank{
     width: 400px;
     height: 400px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 }
 
-.thank div {
+#thank div {
     width: 400px;
     padding: 20px;
     text-align: center;
 }
 
-.thank h1 {
+#thank h1 {
     font-size: 25px;
     letter-spacing: .1em;
     text-transform: uppercase;
@@ -239,13 +240,9 @@ input::placeholder {
     margin: 30px 0 20px 0;
 } 
 
-.thank p {
+#thank p {
     color: var(--Light-grayish-violet);
     margin-bottom: 40px;
-}
-
-.hidden {
-    display: none;
 }
 
 section#left {
