--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ section {
 }
 
 section#left {
-    width: 100%;
+    width: 50%;
     padding: 10px;
     position: relative;
     background-image: url(./images/bg-main-desktop.png);
@@ -55,7 +55,8 @@ section#left #cards {
     flex-direction: column;
     gap: 20px;
     position: absolute;
-    left: 20px;
+    top: 60px;
+    left: 30px;
     margin-top: 50px;
 }
 
